k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk000-myfirst-api-server
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk000-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 9680b322
      labels:
        app: sk000-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk000-myfirst-api-server:1.0.0
        imagePullPolicy: Always
